<?xml version="1.0" encoding="utf-8"?><!--
	Copyright (C) 2010, 2011, 2012, 2013 Herbert von Broeuschmeul
	Copyright (C) 2010, 2011, 2012, 2013 BluetoothGPS4Droid Project
	Copyright (C) 2011, 2012, 2013 UsbGPS4Droid Project
	  
	This file is part of UsbGPS4Droid.
	
    UsbGPS4Droid is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    UsbGPS4Droid is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with UsbGPS4Droid.  If not, see http://www.gnu.org/licenses/
    
-->

<resources>
    <string name="app_name">UsbGps</string>

    <string name="pref_start_gps_title">Start/Stop GPS</string>
    <string name="pref_start_gps_summary_off">Usb GPS is off</string>
    <string name="pref_start_gps_summary_on">Usb GPS is on</string>
    <string name="pref_start_gps_params_title">GPS Options (SiRF)</string>
    <string name="pref_gps_location_provider_title">Location provider options</string>
    <string name="pref_gps_location_provider_summary">Usb GPS will replace internal GPS</string>
    <string name="pref_replace_std_gps_title">Replace internal GPS</string>

    <string name="pref_replace_std_gps_summary">Disable the internal GPS and </string>

    <string name="pref_force_enable_provider_title">Auto-enable location provider</string>
    <string name="pref_force_enable_provider_summary_on">Auto-enable the location provider, even if it has been disabled</string>
    <string name="pref_force_enable_provider_summary_off">Auto-enable the location provider only if it doesn\'t exist yet</string>
    <string name="pref_mock_gps_name_title">Mock location provider name</string>
    <string name="pref_mock_gps_name_summary">Usb GPS name: %s</string>
    <string name="pref_connection_retries_title">Connection retry number</string>
    <string name="pref_connection_retries_summary">Number of attempts before exiting: %s</string>
    <string name="pref_gps_device_title">Choose Usb GPS</string>
    <string name="pref_gps_device_summary">"Current device: %s"</string>
    <string name="pref_gps_device_speed_title">Choose GPS device speed</string>
    <string name="pref_gps_device_speed_summary">"Current speed: %s"</string>
    <string name="pref_about_title">About</string>
    <string name="pref_about_summary"></string>

    <string name="msg_gps_provider_started">Usb GPS... started</string>
    <string name="msg_gps_provider_stopped">Usb GPS... stopped</string>
    <string name="msg_gps_provider_already_started">Usb GPS... is already on</string>
    <string name="msg_gps_provider_stopped_by_problem">"Cannot start: %s"</string>
    <string name="msg_two_many_connection_problems">Too many connection problems</string>
    <string name="msg_gps_provider_disabled">GPS is disabled</string>
    <string name="msg_gps_provider_cant_connect">Unable to connect to device</string>

    <string name="msg_mock_location_disabled">Mock locations disabled in settings</string>
    <string name="msg_mock_location_disabled_full">Mock locations disabled in settings\nClick here to enable mock locations</string>
    <string name="msg_mock_location_disabled_full_dialog_text">Mock locations disabled in settings\nOpen mock location settings?</string>
    <string name="msg_usb_provider_device_not_connected">Device not connected</string>
    <string name="foreground_service_started_notification_title">UsbGps</string>
    <string name="foreground_gps_provider_started_notification">UsbGps service started</string>
    <string name="foreground_nmea_recording_started_notification">UsbGps NMEA recording service started</string>
    <string name="connection_problem_notification_title">UsbGps: connection problem</string>
    <plurals name="connection_problem_notification">
        <item quantity="one">Will retry one more time before closing</item>
        <item quantity="other">Will retry %d more times before closing</item>
    </plurals>
    <string name="service_closed_because_connection_problem_notification_title">UsbGps stopped</string>
    <string name="service_closed_because_connection_problem_notification">"Reason: %s"</string>

    <string name="about_title">About</string>
    <string name="about_version">UsbGPS4Droid %s</string>
    <string name="about_copyright_1">Copyright (C) 2015-2017 Oliver Bell</string>
    <string name="about_copyright_2">Copyright (C) 2010-2013 Herbert von Broeuschmeul</string>
    <string name="about_copyright_3">Copyright (C) 2010-2013 BluetoothGPS4Droid Project</string>
    <string name="about_copyright_4">Copyright (C) 2011-2013 UsbGPS4Droid Project</string>
    <string name="about_app_desc">Usb GPS for Android is an application
                                    for using an external usb GPS on Android devices.
    </string>
    <string name="about_license">It is open source software 
    	distributed free of charge under the terms of the <a href="http://www.gnu.org/licenses/gpl-3.0-standalone.html"><b>GNU General Public License</b></a>.
    </string>
    <string name="about_sources">The source code is available here:
        https://github.com/freshollie/UsbGps4Droid
    </string>

    <string name="msg_no_location_permission">No permission given for device location. Click here to enable.</string>

    <string-array name="pref_gps_device_speed_values">
        <item>auto</item>
        <item>1200</item>
        <item>2400</item>
        <item>4800</item>
        <item>9600</item>
        <item>19200</item>
        <item>38400</item>
        <item>57600</item>
        <item>115200</item>
        <item>230400</item>
        <item>460800</item>
    </string-array>

    <string name="title_activity_settings">Usb Gps Settings</string>

    <string name="pref_toast_logging_title">Show Toasts</string>
    <string name="pref_toast_logging_summary">Show debug toast messages on USB Gps status changes</string>
    <string name="pref_notifications_title">Show Notifications</string>
    <string name="pref_notifications_summary">Show system Notifications on USB Gps status errors</string>

    <string name="number_of_satellites_placeholder">Number of satellites: %s</string>
    <string name="accuracy_placeholder">Accuracy: %s</string>
    <string name="location_placeholder">Location: Lat %1$s, Lon %2$s</string>
    <string name="elevation_placeholder">Altitude: %s</string>
    <string name="speed_placeholder">Speed: %s</string>

    <string name="info_activity_title">UsbGps - Overview</string>

    <string name="pref_start_on_boot_summary_on">Usb Gps service will try and start when android starts</string>
    <string name="pref_start_on_boot_summary_off">Usb Gps service will not try and start when android starts</string>
    <string name="pref_start_on_boot_title">Start service on boot</string>

    <string name="pref_category_device_title">Device</string>
    <string name="pref_category_service_title">Service</string>
    <string name="pref_category_sirf_title">SiRF</string>
    <string name="pref_category_nmea_log_title">NMEA Log</string>
    <string name="pref_category_debug_title">Debug</string>
    <string name="pref_category_other">Other</string>
    <string name="pref_set_time_key">setTime</string>
    <string name="pref_set_time_summary_on">Set the system time to the gps time when a time is received</string>
    <string name="pref_set_time_summary_off">Don\'t set the system time to the gps time</string>
    <string name="pref_set_time_title">Set system time from GPS (Root required)</string>
    <string name="pref_category_about_title">About</string>
    <string name="warning_set_time_needs_su">Set time function needs SU permission</string>
    <string name="warning_no_developer_options">Developer options need to be enabled first</string>
    <string name="gps_time_placeholder">Gps Time: %1$s\nSys Time: %2$s</string>
    <string name="button_open_mock_location_settings">Open mock location settings</string>
    <string name="error_location_permission_required">Location permission is required for UsbGps to function</string>
    <string name="error_storage_permission_required">In order to write a track file, the app needs storage permission</string>
    <string name="settings_button_title">Settings</string>
    <string name="pref_start_on_boot_summary">If enabled, the USB GPS service will be automatically started on boot</string>
    <string name="pref_set_time_summary">Set the system time from the received GPS time</string>
    <string name="pref_daynight_theme_title">Automatic day-night app theme</string>
    <string name="pref_daynight_theme_summary">Show light theme during daytime and dark theme at night</string>
    <string name="pref_daynight_theme_key">dayNightMode</string>

</resources>
