<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:orientation="horizontal"
    tools:context=".ui.GpsInfoActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/num_satellites_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_of_satellites_placeholder"
                android:textAppearance="?android:textAppearanceMedium" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/accuracy_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/accuracy_placeholder"
                android:textAppearance="?android:textAppearanceMedium" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/location_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/location_placeholder"
                android:textAppearance="?android:textAppearanceMedium" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/elevation_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/elevation_placeholder"
                android:textAppearance="?android:textAppearanceMedium" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/speed_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/speed_placeholder"
                android:textAppearance="?android:textAppearanceMedium" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/gps_time_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gps_time_placeholder" />
        </TableRow>


        <ScrollView
            android:id="@+id/log_box_scroller"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:scrollbars="vertical">

            <TextView
                android:id="@+id/log_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:gravity="bottom"
                android:maxLines="100"
                android:scrollbars="vertical"
                android:textSize="11sp" />
        </ScrollView>


    </TableLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2">

        <FrameLayout
            android:id="@+id/settings_holder"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </TableLayout>
</LinearLayout>